# PictureFun

./: .gitignore  CMakeLists.txt  README.md
cmake/: predefines.cmake
conan/: .gitignore  README.md  conanfile.txt  install.py
conan/pf/: conanfile.txt
conan/recipes/ncnn/all/: conandata.yml  conanfile.py
conan/recipes/opencv/4.x/: conandata.yml  conanfile.py
conan/recipes/opencv/4.x/patches/: 0003-libpng.patch
conan/recipes/opencv/4.x/test_package/: CMakeLists.txt  conanfile.py
conan/recipes/qt/6.x.x/: conandata.yml  conanfile.py
conan/recipes/qt/6.x.x/test_package/: CMakeLists.txt
conan/recipes/spdlog/all/: conanfile.py
conan/recipes/tinyxml2/all/: conanfile.py
src/: CMakelists.txt  Info.plist  icons.qrc  imageview.cpp  imageview.h  imgproc.cpp  imgproc.h  main.cpp  mainwnd.cpp  mainwnd.h  settingdlg.cpp  settingdlg.h
src/lang/: cn.xml  en.xml
src/ncnn/: CMakeLists.txt  ncnn_engine.cpp  ncnn_engine.h  ppmatting.cpp  ppmatting.h  realesrgan.cpp  realesrgan.h
src/res/: PictureFun.icns
utils/: CMakeLists.txt  i18n.cpp  i18n.h  logger.cpp  logger.h  preference.cpp  preference.h  strings.cpp  strings.h  system.cpp  system.h  system.mm
